--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.7.2
 distlib==0.3.6
 Django==5.0
+django-crispy-forms==1.14.0
 django-htmx==1.17.2
 filelock==3.12.2
 Markdown==3.5.1
+Pillow==10.1.0
 platformdirs==3.8.0
 sqlparse==0.4.4
 tzdata==2023.3
